[Composer] Disable useless spell check update
Replying to an email containing nested quotations makes the view scroll with long, constant stutters.
This drag/hang does not occur when viewing the message itself, but only in the composition window.
Evolution 3.30.1-1 (Debian testing)
Other notes: The issue is primarily seen in HTML emails, but there is some brief drag in the plaintext view when nest quote levels change as they're scrolling past (Going from >>>> to >>> quoted text, for instance) Scrolling is primarily affected when quoted emails are in view or nearly in view Checked Wayland, not sure about behavior on X The quoted emails are of a medium length, haven't tested short emails/quotes
Edited by Milan Crha