I#187 - [Composer] Disable useless spell check update

Closes https://gitlab.gnome.org/GNOME/evolution/issues/187